# festival-plugin

./: .crails  CMakeLists.txt  festival.description.json  festival.fr.json  package-lock.json  prebuild.sh  webpack.config.js
app/: backtrace.cpp  database.cpp  main.cpp  renderers.cpp  routes.cpp  sitemap.cpp  sitemap.hpp
app/assets/javascripts/: admin.js  application.js
app/assets/javascripts/admin/: artistLink.js  artistPicker.js  multipleDateInput.js
app/assets/stylesheets/: application.scss
app/controllers/: artist.hpp  event.cpp  event.hpp  festival.cpp  festival.hpp  programme.cpp  programme.hpp
app/controllers/admin/: artist.hpp  event.cpp  event.hpp  festival.hpp
app/models/: artist.cpp  artist.hpp  artist_traits.hpp  event.cpp  event.hpp  event_traits.hpp  festival.cpp  festival.hpp  festival_traits.hpp
app/views/admin/artist/: index.html  index.json  show.html
app/views/admin/festival/: index.html  show.html
app/views/admin/festival-event/: index.html  show.html
app/views/artist/: show.html  show.json
app/views/festival/: _dates.html  index.html  injectable.html  show.html
app/views/festival/event/: programme.html  show.html
